plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__python_decompose_function_and_class.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 72
expression: "decompose(\"py\", source)"
---
[
    Fragment {
        name: "greet",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..70,
        signature: Some(
            "def greet(name):",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 4,
        children: [
            Fragment {
                name: "docstring",
                kind: Docstring,
                byte_range: 21..41,
                signature: None,
                visibility: None,
                metadata: None,
                name_byte_offset: 21,
                children: [],
                parent_name: Some(
                    "greet",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Person",
        kind: Symbol(
            Class,
        ),
        byte_range: 72..140,
        signature: Some(
            "class Person:",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 78,
        children: [
            Fragment {
                name: "__init__",
                kind: Symbol(
                    Function,
                ),
                byte_range: 90..140,
                signature: Some(
                    "def __init__(self, name):",
                ),
                visibility: None,
                metadata: None,
                name_byte_offset: 94,
                children: [],
                parent_name: Some(
                    "Person",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
