plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__python_decorated_class.snap
---
source: nyne-coding/src/syntax/tests.rs
expression: result.fragments
---
[
    Fragment {
        name: "Point",
        kind: Symbol(
            Class,
        ),
        byte_range: 0..45,
        full_span: 0..45,
        line_range: 0..4,
        signature: Some(
            "@dataclass",
        ),
        metadata: Code {
            visibility: None,
            doc_comment_range: None,
            decorator_range: Some(
                0..10,
            ),
        },
        name_byte_offset: 17,
        children: [
            Fragment {
                name: "x",
                kind: Symbol(
                    Variable,
                ),
                byte_range: 28..34,
                full_span: 28..34,
                line_range: 2..3,
                signature: Some(
                    "x: int",
                ),
                metadata: Code {
                    visibility: None,
                    doc_comment_range: None,
                    decorator_range: None,
                },
                name_byte_offset: 28,
                children: [],
                parent_name: Some(
                    "Point",
                ),
                fs_name: None,
            },
            Fragment {
                name: "y",
                kind: Symbol(
                    Variable,
                ),
                byte_range: 39..45,
                full_span: 39..45,
                line_range: 3..4,
                signature: Some(
                    "y: int",
                ),
                metadata: Code {
                    visibility: None,
                    doc_comment_range: None,
                    decorator_range: None,
                },
                name_byte_offset: 39,
                children: [],
                parent_name: Some(
                    "Point",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
