plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__python_decorated_function.snap
---
source: plugins/coding/src/syntax/tests.rs
expression: "decompose(\"py\", \"@app.route('/')\\ndef index():\\n    pass\\n\")"
---
[
    Fragment {
        name: "index",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..37,
        signature: Some(
            "@app.route('/')",
        ),
        metadata: Code {
            visibility: None,
        },
        name_byte_offset: 20,
        children: [
            Fragment {
                name: "decorators",
                kind: Decorator,
                byte_range: 0..15,
                signature: None,
                metadata: Code {
                    visibility: None,
                },
                name_byte_offset: 0,
                children: [],
                parent_name: Some(
                    "index",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
