plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__python_module_variable.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 97
expression: "decompose(\"py\", \"MAX_SIZE = 100\\n\")"
---
[
    Fragment {
        name: "MAX_SIZE",
        kind: Symbol(
            Variable,
        ),
        byte_range: 0..14,
        signature: Some(
            "MAX_SIZE = 100",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 0,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
