plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__rust_decompose_function.snap
---
source: nyne-coding/src/syntax/tests.rs
expression: result.fragments
---
[
    Fragment {
        name: "hello",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..17,
        full_span: 0..17,
        line_range: 0..1,
        signature: Some(
            "pub fn hello()",
        ),
        metadata: Code {
            visibility: Some(
                "pub",
            ),
            doc_comment_range: None,
            decorator_range: None,
        },
        name_byte_offset: 7,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
