plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__rust_imports_extracted.snap
---
source: nyne-coding/src/syntax/tests.rs
expression: result.imports
---
Some(
    ImportSpan {
        byte_range: 0..26,
        line_range: 0..2,
        content: "use std::io;\nuse std::fmt;",
    },
)
