plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__tsx_uses_different_grammar.snap
---
source: plugins/coding/src/syntax/tests.rs
expression: "decompose(\"tsx\", \"export function App() {\\n    return <div>Hello</div>;\\n}\\n\")"
---
[
    Fragment {
        name: "App",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..54,
        signature: Some(
            "export function App()",
        ),
        metadata: Code {
            visibility: Some(
                "export",
            ),
        },
        name_byte_offset: 16,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
