plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__typescript_class_with_methods.snap
---
source: nyne-coding/src/syntax/tests.rs
expression: result.fragments
---
[
    Fragment {
        name: "Greeter",
        kind: Symbol(
            Class,
        ),
        byte_range: 0..46,
        full_span: 0..46,
        line_range: 0..3,
        signature: Some(
            "class Greeter",
        ),
        metadata: Code {
            visibility: None,
            doc_comment_range: None,
            decorator_range: None,
        },
        name_byte_offset: 6,
        children: [
            Fragment {
                name: "greet",
                kind: Symbol(
                    Function,
                ),
                byte_range: 20..44,
                full_span: 20..44,
                line_range: 1..2,
                signature: Some(
                    "greet()",
                ),
                metadata: Code {
                    visibility: None,
                    doc_comment_range: None,
                    decorator_range: None,
                },
                name_byte_offset: 20,
                children: [],
                parent_name: Some(
                    "Greeter",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
